--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^3.4.4",
     "react-switch": "^6.0.0",
     "reactstrap": "^9.0.0",
     "web-vitals": "^1.0.1"
